display time taken in the quiz results

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
             <div class="options" id="options">
                 <!-- Options will be dynamically generated here -->
             </div>
-            <button id="nextButton" class="hidden">Next Question</button>
+            <!-- Removed #nextButton from here -->
         </div>
 
         <div class="results-area hidden">
             <h2>Quiz Results</h2>
             <p>Correct Answers: <span id="correctAnswers">0</span></p>
             <p>Incorrect Answers: <span id="incorrectAnswers">0</span></p>
+            <p>Time Taken: <span id="timeTaken">0</span>s</p> <!-- New line added here -->
             <button id="restartButton">Restart Quiz</button>
         </div>
     </div>
