--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- PWA: Add manifest link -->
     <link rel="manifest" href="manifest.json">
     <!-- PWA: Add Apple touch icon (optional but good for iOS) -->
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+    <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <!-- PWA: Theme color for browser UI -->
     <meta name="theme-color" content="#2193b0">
 </head>
